차량관리 고도화 * 이관 시 보험료 아래에 부대비용과 같이  “+” 눌러 추징금 , 환급금 입력할 수 있어야 합니다. * 보험 이관 시 해당 보험의 시기 , 종기, 보험료 납부완료 상태를 그대로 받아오기 * 보험정보 수정할때마다 히스토리 남음